--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="button-group">
-                    <button class="btn secondary" id="finalizar-tramos-btn">Finalizar Trampos y Calcular</button>
+                    <button class="btn secondary" id="finalizar-tramos-btn">Finalizar Tramos y Calcular</button>
                     <button class="btn cancel" id="cancelar-btn">Cancelar</button>
                 </div>
             </div>
@@ -85,6 +85,10 @@
                 <div class="tramo-seleccionado">
                     <h3 id="nombre-tramo-actual"></h3>
                     <p>Diámetro predimensionado: <span id="diametro-predimensionado"></span></p>
+                </div>
+
+                <div class="button-group">
+                    <button class="btn secondary" id="copiar-accesorios-btn">Copiar Accesorios de Otro Tramo</button>
                 </div>
 
                 <div class="accesorios-container">
@@ -153,7 +157,8 @@
                 <h2>Resumen Final</h2>
                 <div class="resumen-container" id="resumen-final"></div>
                 <div class="button-group">
-                    <button class="btn secondary" id="descargar-btn">Descargar Datos</button>
+                    <button class="btn secondary" id="descargar-pdf-btn">Descargar PDF Completo</button>
+                    <button class="btn secondary" id="descargar-csv-btn">Descargar CSV</button>
                     <button class="btn primary" id="copiar-btn">Copiar al Portapapeles</button>
                     <button class="btn primary" id="nuevo-calculo-btn">Nuevo Cálculo</button>
                 </div>
